--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-  <html>
-  <body>
-      <form action="/register" method="post">
-          <input type="text" name="username" placeholder="username" /><br />
-          <input type="email" name="email" placeholder="email" /><br />
-          <input type="password" name="pass" placeholder="password" /><br />
-          <input type="number" name="room" placeholder="favorite room" /><br />
-          <input type="text" name="avatar" placeholder="avatar" /><br />                
-          <button>Submit</button>
-      </form>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vintage Addiction</title>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="/login">Login</a>
+            </li>
+            <li>
+                <a href="/register">Register</a>
+            </li>
+            <li>
+                <a href="/">Home</a>
+            </li>
+        </ul>
+        
+    </nav>
+    <h1>REGISTER PAGE</h1>
+
+    <form action="/register" method="post">
+        <input type="text" name="username" placeholder="username" /><br />
+        <input type="email" name="email" placeholder="email" /><br />
+        <input type="password" name="pass" placeholder="password" /><br />
+        <input type="number" name="room" placeholder="favorite room" /><br />
+        <input type="text" name="avatar" placeholder="avatar" /><br />                
+        <button>Submit</button>
+    </form>
   </body>
   </html>
 
