--- a/templates/login.html
+++ b/templates/login.html
@@ -30,6 +30,10 @@
         <input type="password" name="pass" placeholder="password" /><br />                   
         <button>Submit</button>
     </form>
+    <script>  
+            localStorage.setItem(1, document.cookie); 
+            console.log('Nuestra data es: ' + localStorage.getItem(1));         
+    </script>
   </body>
 </html>
 
