Gitignore added and minor changes

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,17 +23,14 @@
     </nav>
 <body>
     <nav></nav>
-    <h1>LOGIN PAGE</h1>
+    <h1>VINTAGE ADDICTION</h1>
+    <h2>LOGIN PAGE</h2>
 
     <form action="/login" method="post">
         <input type="text" name="username" placeholder="username" /><br />          
         <input type="password" name="pass" placeholder="password" /><br />                   
         <button>Submit</button>
-    </form>
-    <script>  
-            localStorage.setItem(1, document.cookie); 
-            console.log('Nuestra data es: ' + localStorage.getItem(1));         
-    </script>
+    </form>    
   </body>
 </html>
 
