--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,8 @@
         </ul>
         
     </nav>
-    <h1>REGISTER PAGE</h1>
+    <h1>VINTAGE ADDICTION</h1>
+    <h2>REGISTER PAGE</h2>
 
     <form action="/register" method="post">
         <input type="text" name="username" placeholder="username" /><br />
