--- a/templates/register.html
+++ b/templates/register.html
@@ -7,31 +7,123 @@
     <title>Vintage Addiction</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/login">Login</a>
-            </li>
-            <li>
-                <a href="/register">Register</a>
-            </li>
-            <li>
-                <a href="/">Home</a>
-            </li>
-        </ul>
+    <header>
+        <nav class="navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/index">Vintage Addiction</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Vintage Addiction</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/register">Register</a>
+                    </li>                
+                  </ul>              
+                </div>
+              </div>
+            </div>
+          </nav>
+    
+    </header>
         
-    </nav>
+    
     <h1>VINTAGE ADDICTION</h1>
-    <h2>REGISTER PAGE</h2>
-
-    <form action="/register" method="post">
+    <!-- <form action="/register" method="post">
         <input type="text" name="username" placeholder="username" /><br />
         <input type="email" name="email" placeholder="email" /><br />
         <input type="password" name="pass" placeholder="password" /><br />
         <input type="number" name="room" placeholder="favorite room" /><br />
         <input type="text" name="avatar" placeholder="avatar" /><br />                
         <button>Submit</button>
-    </form>
-  </body>
-  </html>
+    </form> -->
+
+
+    <section class="vh-100" >
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+              <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                <div class="card-body p-5 text-center">
+      
+                  <h3 class="mb-5">Register</h3>
+                    
+                  <form action="/register" method="post">
+
+                  <div class="form-outline mb-4">
+                        <input type="text" name="username" id="username" class="form-control form-control-lg" />
+                        <label class="form-label" for="typeEmailX-2">Email</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="email" name="email" id="email" class="form-control form-control-lg" />
+                    <label class="form-label" for="typeEmailX-2">Email</label>
+                  </div>
+      
+                  <div class="form-outline mb-4">
+                    <input type="password" name="pass" id="pass" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Password</label>
+                  </div>                  
+
+                  <div class="form-outline mb-4">
+                    <input type="number" name="room" id="room" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Favorite room</label>
+                  </div>                  
+
+                  <!-- <div class="form-outline mb-4">
+                    <input type="text" name="avatar" id="avatar" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX-2">Avatar</label>
+                  </div>                   -->
+                  <div class="col-sm">
+                    <label>Choose Avatar</label>    
+                    <div id="registerAvatar" class="d-flex flex-wrap justify-content-space-between">                        
+                        <img id="t1"  src="punk01.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t2"  src="punk02.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t3"  src="punk03.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t4"  src="punk04.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t5"  src="punk05.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t6"  src="punk06.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t7"  src="punk07.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />
+                        <img id="t8"  src="punk08.png" class="rounded-circle" style="width: 75px;" alt="Avatar"  />                        
+                    </div>
+                </div>
+                <br>
+
+                  <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>  
+                </form>                                            
+      
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+  </body>  
+</html>
+
+<style>
+    .center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 500px;  
+    }
+    
+    body {
+      background-color: lightgreen;
+    }
+    
+</style>
 
