Modelo MVC y funciones de loggeo en clases apropiadas

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -16,7 +16,7 @@
                 <a href="/register">Register</a>
             </li>
             <li>
-                <a href="/">Home</a>
+                <a href="/public">Home</a>
             </li>
         </ul>        
     </nav>
