--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -5,21 +5,370 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vintage Addiction</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#containerRooms").hide().fadeIn(3000);
+            $("#wrapper-main").hide().fadeIn(1000);
+        });
+
+        /**
+         * Change the color of a selected room from blue to red, the unselected ones will be painted again in blue.
+         * @param  {Number} roomNumber Number of the selected room.
+         */
+        function roomSelected(roomNumber) {
+
+            $("#room1").css("background-color", "rgb(58, 140, 255)")
+            $("#room2").css("background-color", "rgb(58, 140, 255)")
+            $("#room3").css("background-color", "rgb(58, 140, 255)")
+
+            switch (roomNumber) {
+
+                case "room1":
+
+                    $("#room1").css("background-color", "red")
+
+                    break;
+                case "room2":
+
+                    $("#room2").css("background-color", "red")
+
+                    break;
+                case "room3":
+
+                    $("#room3").css("background-color", "red")
+
+                    break;
+                default:
+                // code block
+            }
+        }
+    </script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/login">Login</a>
-            </li>
-            <li>
-                <a href="/register">Register</a>
-            </li>
-            <li>
-                <a href="/public">Home</a>
-            </li>
-        </ul>        
-    </nav>
+    <div id="wrapper-main">
+        <div class="wrapper-header">
+            <div class="wrapper-log-out">
+                    <span id="log-out">Log out
+                        <i class="fa-solid fa-right-from-bracket" style="color: white; font-size: 30px; margin-left: 8px;"></i>
+                    </span>
+
+            </div>
+        </div>
+        <div class="wrapper-content">
+            <div class="wrapper-info">
+                <div class="wrapper-user">
+                    <div id="avatar-picker" ondrop="drop(event)" ondragover="allowDrop(event)">
+                        <span id="user-name"></span>
+
+                        <img draggable="true" ondragstart="drag(event)" id="avatarChoose" src="">
+                        <i id="avatarChange" class="fas fa-caret-square-down"></i>
+
+                    </div>
+
+                    <div id="wrapper-selector">
+                        <div id="avatar-selector">
+                            <div class="avatar-row">
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-1" src="/assets/avatars?1">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-2" src="/assets/avatars?2">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-3" src="/assets/avatars?3">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-4" src="/assets/avatars?4">
+                                </div>
+                            </div>
+                            <div class="avatar-row">
+
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-5" src="/assets/avatars?5">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-6" src="/assets/avatars?6">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-7" src="/assets/avatars?7">
+                                </div>
+                                <div class="avatar-item">
+                                    <img class="avatar" id="item-8" src="/assets/avatars?8">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h1>Welcome to console.log(play) game</h1>
+                </div>
+                <div class="wrapper-helper">
+                    <spam> To start playing choose a room.</spam>
+                    <spam>In each room you can play up to two players maximum.</spam>
+                    <spam>Drag an drop your avatar to choose one room.</spam>
+                    <spam><i class="fas fa-lg fa-user-friends"></i>Room is full <i class="fas fa-lg fa-user-alt"></i>One
+                        person in the room <i class="fas fa-lg fa-user-alt-slash"></i>Room is empty</spam>
+                </div>
+            </div>
+            <div class="wrapper-rooms">
+                <div class="container-rooms" id="containerRooms">
+                    <div class="wrapper-container">
+                        <div class="wrapper-ocupation">
+                            <i style="" id="oroom1"></i>
+                        </div>
+                        <div id="room1" class="room" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                    </div>
+                    <div class="wrapper-container">
+                        <div class="wrapper-ocupation">
+                            <i style="" id="oroom2"></i>
+                        </div>
+                        <div id="room2" class="room" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                    </div>
+                    <div class="wrapper-container">
+                        <div class="wrapper-ocupation">
+                            <i style="" id="oroom3"></i>
+                        </div>
+                        <div id="room3" class="room" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header" style="background-color:rgb(174, 253, 140)">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Console.log(play)</h4>
+                </div>
+                <div class="modal-body" style="background-color:#ffffe6">
+                    <p id="alert-text"></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <script>
+
+        //MODAL POPUP
+        $('#myModal').on('click', 'button.close', function (eventObject) {
+            $('#myModal').modal('hide');
+        });
+
+
+        //DATA LOCALSTORAGE
+        var user = JSON.parse(localStorage.getItem('User'));
+        var avatar = document.getElementById("avatarChoose");
+        var userName = document.getElementById("user-name");
+        userName.innerHTML = "Hi" + ' ' + user.name.toLowerCase();
+        avatar.src = user.avatar;
+
+        //LOG OUT
+        var logOut = document.getElementById("log-out");
+        logOut.addEventListener("click", function () {
+            fetch("/logOut?user=" + user.username).then(response => {
+                if (response.ok) {
+                    var userLogOut = {
+                        'name': user.name,
+                        'username': user.username,
+                        'isLogged': false,
+                        'avatar': user.avatar,
+                        'room1': false,
+                        'room2': false,
+                        'room3': false
+                    }
+                    localStorage.setItem('User', JSON.stringify(userLogOut))
+                    window.location.assign(response.url)
+                }
+            })
+        })
+
+        //DRAG AND DROP
+
+        function allowDrop(ev) {
+            ev.preventDefault();
+        }
+
+        function drag(ev) {
+            ev.dataTransfer.setData("text", ev.target.id);
+        }
+        /**
+         * Se encarga del drop al arrastrar el usuario. Sólo permite el movimiento si la habitación tiene hueco.
+         * @param  {Event} ev evento que lanza la función
+         */
+        function drop(ev) {
+            var data = ev.dataTransfer.getData("text");
+            if (ev.target.id != "user-name") {
+                fetch('/ocupation?room=' + ev.target.id + '&user=' + user.username).then(response => {
+                    if (response.ok) {
+                        document.getElementById("alert-text").innerHTML = 'Welcome to the room';
+                        $("#myModal").modal("show");
+                        var onRoom = ev.target.id;
+                        user[onRoom] = true;
+                        localStorage.setItem('User', JSON.stringify(user));
+                        ev.preventDefault();
+                        var nodeCopy = document.getElementById(data).cloneNode(true);
+                        nodeCopy.id = "newId"
+                        ev.target.appendChild(nodeCopy);
+                        roomSelected(ev.target.id);
+                        document.getElementById(ev.target.id).innerHTML = document.getElementById(ev.target.id).innerHTML + '<input class="btn btn-primary" type="button" value="Get out" onClick=getOutRoom("' + ev.target.id + '","' + user.username + '") />';
+                    }
+                    else {
+                        document.getElementById("alert-text").innerHTML = 'Room is full. Try another one';
+                        $("#myModal").modal("show");
+                    }
+                })
+            }
+            else {
+                var nodeCopy = document.getElementById(data).cloneNode(true);
+                nodeCopy.id = "newId"
+                ev.target.appendChild(nodeCopy);
+            }
+        }
+
+        /**
+         * Se encarga de gestionar la entrada en la sala de usuarios. Borra la sala seleccionada por el usuario.
+         * @param  {Room} room habitación seleccionada por el usuario
+         * @param userName
+         */
+        function getOutRoom(room, userName) {
+            fetch('/disconnect?room=' + room + '&user=' + userName).then(response => {
+                if (response.ok) {
+                    document.getElementById("alert-text").innerHTML = 'Correctly disconnected';
+                    $("#myModal").modal("show");
+                    user[room] = false;
+                    localStorage.setItem('User', JSON.stringify(user));
+                    document.getElementById(room).innerHTML = '<i id="o' + room + '"></i>';
+                    document.getElementById(room).style.backgroundColor = 'rgb(58, 140, 255)';
+                }
+                else {
+                    document.getElementById("alert-text").innerHTML = 'Error leaving the room';
+                    $("#myModal").modal("show");
+                }
+            })
+        }
+
+        /** Escoger avatar **/
+
+        var avatarPicker = document.getElementById("avatarChange");
+        avatarPicker.addEventListener("click", function (event) {
+            document.getElementById('wrapper-selector').style.display = 'flex';
+            document.getElementById('wrapper-selector').style.visibility = 'visible';
+
+            var avatar1 = document.getElementById("item-1");
+            avatar1.addEventListener("click", function () {
+                avatarChoose.src = avatar1.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user))
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar2 = document.getElementById("item-2");
+            avatar2.addEventListener("click", function () {
+                avatarChoose.src = avatar2.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user))
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar3 = document.getElementById("item-3");
+            avatar3.addEventListener("click", function () {
+                avatarChoose.src = avatar3.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar4 = document.getElementById("item-4");
+            avatar4.addEventListener("click", function () {
+                avatarChoose.src = avatar4.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar5 = document.getElementById("item-5");
+            avatar5.addEventListener("click", function () {
+                avatarChoose.src = avatar5.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar6 = document.getElementById("item-6");
+            avatar6.addEventListener("click", function () {
+                avatarChoose.src = avatar6.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar7 = document.getElementById("item-7");
+            avatar7.addEventListener("click", function () {
+                avatarChoose.src = avatar7.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+
+            var avatar8 = document.getElementById("item-8");
+            avatar8.addEventListener("click", function () {
+                avatarChoose.src = avatar8.src;
+                document.getElementById('wrapper-selector').style.display = 'none';
+                user.avatar = avatarChoose.src
+                localStorage.setItem('User', JSON.stringify(user));
+                document.getElementById('wrapper-selector').style.visibility = 'hidden';
+            })
+        })
+
+        /** Comprueba que la habitación esté llena
+            @param  {Number} room Número de la habitación que comprueba. **/
+        function checkOcupation(room) {
+            fetch('/ocupationcheck?room=' + room + '&user=' + user.username).then(response => {
+                if (response.status === 200) {
+                    document.getElementById('o' + room).classList.add("fas");
+                    document.getElementById('o' + room).classList.add("fa-user-alt-slash");
+                    document.getElementById('o' + room).classList.remove("fa-user-alt");
+                    document.getElementById('o' + room).classList.remove("fa-user-friends");
+                    document.getElementById('o' + room).classList.add("fa-2x");
+
+                }
+                else if (response.status === 201) {
+                    document.getElementById('o' + room).classList.add("fas");
+                    document.getElementById('o' + room).classList.add("fa-user-alt");
+                    document.getElementById('o' + room).classList.remove("fa-user-alt-slash");
+                    document.getElementById('o' + room).classList.remove("fa-user-friends");
+                    document.getElementById('o' + room).classList.add("fa-2x");
+                }
+                else if (response.status === 403) {
+                    document.getElementById('o' + room).classList.add("fas");
+                    document.getElementById('o' + room).classList.add("fa-user-friends");
+                    document.getElementById('o' + room).classList.remove("fa-user-alt");
+                    document.getElementById('o' + room).classList.remove("fa-user-alt-slash");
+                    document.getElementById('o' + room).classList.add("fa-2x");
+
+                }
+            })
+        }
+        setInterval(function () { checkOcupation("room1", user.username) }, 1000);
+        setInterval(function () { checkOcupation("room2", user.username) }, 1000);
+        setInterval(function () { checkOcupation("room3", user.username) }, 1000);
+
+
+    </script>
 <body>  
 
   <h1>VINTAGE ADDICTION</h1>
