--- a/public/views/register.html
+++ b/public/views/register.html
@@ -182,7 +182,7 @@
                         'room3': false
                     }
                     localStorage.setItem('User', JSON.stringify(newObject))
-                    window.location.assign("/home")
+                    window.location.assign("/landing")
                 } else {
                     document.getElementById('helper').style.visibility = "visible"
                 }
