Added functional drag&drop

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,10 +37,15 @@
 
 </header>
 <body>  
-    <div class="center">
-        <h1>HELLO JAVASCRIPT!</h1>  
+    
+    <div class="container">
         
-    </div>    
+        <div class="row justify-content-center center"  >
+        
+            <img id="squares" src="portrait.png" alt="Choose your room!"  />                                
+            
+        </div>
+    </div>
   
 
 
@@ -51,12 +56,21 @@
 
 
 <style>
+
 .center {
+  margin-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+  
+/* .center {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 500px;  
-}
+} */
 
 body {
   background-color: lightgreen;
