--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,36 +7,157 @@
     <title>Vintage Addiction</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/login">Login</a>
-            </li>
-            <li>
-                <a href="/register">Register</a>
-            </li>
-            <li>
-                <a href="/">Home</a>
-            </li>
-        </ul>        
-    </nav>
-<body>  
+    <header>
+        <nav class="navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/index">Vintage Addiction</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Vintage Addiction</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/register">Register</a>
+                    </li>                
+                  </ul>              
+                </div>
+              </div>
+            </div>
+          </nav>
+    
+    </header>
+        
 
   <h1>VINTAGE ADDICTION</h1>
-  <h2 id="user"></h2>
 
-  <p id="avatar"></p>
-  <p id="room"></p>
+  <div class="container" style="margin-top: 50px;">
+  
+    <div class="row justify-content-md-center">
+        <div class="col">
+            <h2 id="user"></h2>
+        </div>        
+    </div>
 
+    <div class="row justify-content-md-center">
+        <div class="col">
+            <p id="room"></p>
+        </div>        
+    </div>
+    
+    <div draggable="true" class="row justify-content-center">
+        <img  id="avatar" class="rounded-circle" style="width: 130px;" alt="Avatar"  />                                        
+    </div>
 
+    <div class="row justify-content-center center"  >        
+        <img id="choose" src="choose.png" alt="Choose your room!"  />                                        
+    </div>
 
-  <script>
+    <div class="row justify-content-center" style="margin-bottom: 30px;">
+    <img id="room01" name="rooms" src="room01.png" class="rounded-circle" style="width: 140px;" alt="Room"  />                        
+    <img id="room02" name="rooms" src="room02.png" class="rounded-circle" style="width: 140px;" alt="Room"  />                        
+    <img id="room03" name="rooms" src="room03.png" class="rounded-circle" style="width: 140px;" alt="Room"  />                        
+    <img id="room04" name="rooms" src="room04.png" class="rounded-circle" style="width: 140px;" alt="Room"  />                        
+    </div>
+</div>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
+<script>
+
+    //Personalize dashboard with cookie data
     const obj = JSON.parse( document.cookie );
-    document.getElementById( "user" ).innerHTML = obj.username.toUpperCase() + " DASHBOARD";
-    document.getElementById( "avatar" ).innerHTML = obj.avatar.toUpperCase();
+    document.getElementById( "user" ).innerHTML = obj.username.toUpperCase() + " DASHBOARD";    
     document.getElementById( "room" ).innerHTML = "FAVORITE ROOM " + obj.room.toUpperCase();
+
+    const img = document.getElementById( "avatar" );
+    img.src = obj.avatar;
+
+    //Set cookie in localStorage
     localStorage.setItem( 1, document.cookie ); 
-    console.log( 'Nuestra data es: ' + localStorage.getItem( 1 ) );         
+
+    //Add drag & drop capabilties
+    img.addEventListener('dragstart', dragStart);
+
+    function dragStart(e) 
+    {        
+        e.dataTransfer.setData('text/plain', e.target.id);
+        setTimeout(() => 
+        {
+            e.target.classList.add('hide');
+        }, 0);
+    }
+
+    const rooms = document.getElementsByName("rooms");
+
+    rooms.forEach(room => 
+    {
+        room.addEventListener('dragenter', dragEnter)
+        room.addEventListener('dragover', dragOver);
+        room.addEventListener('dragleave', dragLeave);
+        room.addEventListener('drop', drop);
+
+    });
+
+    function dragEnter(e) 
+    {
+        e.preventDefault();
+        e.target.classList.add('drag-over');
+    }
+
+    function dragOver(e) 
+    {
+        e.preventDefault();
+        e.target.classList.add('drag-over');
+    }
+
+    function dragLeave(e) 
+    {
+        e.target.classList.remove('drag-over');
+        
+    }
+
+    function drop(e) 
+    {        
+        console.log(e.target.id);
+        console.log(obj);
+
+    }
+
 </script>
+
+
 </body>
 </html>
+
+<style>
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+    }
+
+.hide {
+    display: none;
+    }
+
+.drag-over {
+    border: dashed 3px red;
+    }
+  
+body {
+    background-color: lightgreen;
+    }
+
+  
+</style>
