--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,6 +68,15 @@
     </div>
 </div>
 
+<form id="postdata" action="/room" method="post">
+    
+      <input type="hidden" name="player"  />
+      <input type="hidden" name="avatar"  />
+      <input type="hidden" name="room"  />
+      
+</form>
+                       
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
@@ -127,8 +136,13 @@
 
     function drop(e) 
     {        
-        console.log(e.target.id);
-        console.log(obj);
+        const form  = document.getElementById('postdata');
+
+        form.elements['player'].value = obj.username;
+        form.elements['avatar'].value = obj.avatar;
+        form.elements['room'].value = e.target.id;        
+        
+        form.submit();
 
     }
 
