--- a/templates/login.html
+++ b/templates/login.html
@@ -55,12 +55,12 @@
                     
                   <form action="/login" method="post">
                   <div class="form-outline mb-4">
-                    <input type="email" name="username" id="typeEmailX-2" class="form-control form-control-lg" />
+                    <input type="email" name="username" id="typeEmailX-2" class="form-control form-control-lg" required/>
                     <label class="form-label" for="typeEmailX-2">Email</label>
                   </div>
       
                   <div class="form-outline mb-4">
-                    <input type="password" name="pass" id="typePasswordX-2" class="form-control form-control-lg" />
+                    <input type="password" name="pass" id="typePasswordX-2" class="form-control form-control-lg" required/>
                     <label class="form-label" for="typePasswordX-2">Password</label>
                   </div>                  
       
