--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -27,7 +27,11 @@
                     <li class="nav-item">
                       <a class="nav-link" href="/register">Register</a>
                     </li>                
-                  </ul>              
+                  </ul> 
+                  <li class="nav-item">
+                    <a onclick="logOut()" class="nav-link" href="/index">Logout</a>
+                  </li>                
+                                  
                 </div>
               </div>
             </div>
@@ -75,6 +79,9 @@
       <input type="hidden" name="room"  />
       
 </form>
+
+
+
                        
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -144,6 +151,12 @@
         
         form.submit();
 
+    }
+
+    function logOut() 
+    {
+      localStorage.clear();
+      location.replace("/index")
     }
 
 </script>
