--- a/templates/register.html
+++ b/templates/register.html
@@ -51,17 +51,17 @@
                   <form id="reg_form" action="/register" method="post">
 
                   <div class="form-outline mb-4">
-                        <input type="text" name="username" id="username" class="form-control form-control-lg" />
+                        <input type="text" name="username" id="username" class="form-control form-control-lg" required/>
                         <label class="form-label" for="typeEmailX-2">Username</label>
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="email" name="email" id="email" class="form-control form-control-lg" />
+                    <input type="email" name="email" id="email" class="form-control form-control-lg" required/>
                     <label class="form-label" for="typeEmailX-2">Email</label>
                   </div>
       
                   <div class="form-outline mb-4">
-                    <input type="password" name="pass" id="pass" class="form-control form-control-lg" />
+                    <input type="password" name="pass" id="pass" class="form-control form-control-lg" required/>
                     <label class="form-label" for="typePasswordX-2">Password</label>
                   </div>                  
 
