--- a/templates/room.html
+++ b/templates/room.html
@@ -26,7 +26,10 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/register">Register</a>
-                    </li>                
+                    </li>    
+                    <li class="nav-item">
+                      <a onclick="logOut()" class="nav-link" href="/index">Logout</a>
+                    </li>                            
                   </ul>              
                 </div>
               </div>
@@ -91,10 +94,14 @@
     }
     //console.log(room, player1Avatar, player1User, playersNumber );
 
-    
-
     //Set cookie in localStorage
     localStorage.setItem( 2, document.cookie ); 
+
+    function logOut() 
+    {
+      localStorage.clear();
+      location.replace("/index")
+    }
 
     
 
